Fix iOS keyboard accessory bar and viewport resize (v1.0.1)
Replace contenteditable with offscreen hidden textarea to avoid
iOS Safari accessory bar. Use visualViewport API to shrink app
when keyboard appears. Allow clear button in edit mode.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 html, body {
-  position: fixed;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -20,10 +19,11 @@ html, body {
 #app {
   display: flex;
   flex-direction: column;
-  height: 100dvh;
+  height: calc(var(--vh, 1dvh) * 100);
   padding-top: env(safe-area-inset-top);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  overflow: hidden;
 }
 
 /* --- Text Display Area --- */
@@ -44,14 +44,16 @@ html, body {
   line-height: 1.3;
   transition: font-size 0.1s ease;
   outline: none;
-  caret-color: transparent;
 }
 
-body.edit-mode #text-content {
-  caret-color: #2196F3;
-}
-
-body.edit-mode {
+#hidden-input {
+  position: fixed;
+  left: -9999px;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  font-size: 16px; /* prevent iOS zoom */
   -webkit-user-select: text;
   user-select: text;
 }
